--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>HTML do Daviii</h1>
-  <h1>HTML de Igorrr</h1>
+  <h1>HTML de Igor</h1>
   <h1>HTML de Pedro</h1>
 </body>
 </html>
