--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>HTML de Igorrr</h1>
   <h1>HTML de Pedro</h1>
   <h1>HTML de Ricardo</h1>
-  <h1>HTML de Laerte</h1>
+  <h1>HTML de Laerte Alves</h1>
+  <h1>Fim</h1>
 </body>
 </html>
